# streamlit-dbt-metrics-explorer

./: .gitignore  README.md  app.py  pyproject.toml  utils.py
example_dbt_project/: dbt_project.yml  packages.yml  profiles.yml
example_dbt_project/models/netflix/: metrics.yml  netflix_release_metrics.sql  netflix_releases.sql
example_dbt_project/models/soccer/: metrics.yml  soccer_matches.sql
example_dbt_project/models/substack/: metrics.yml  substack_subscribers.sql
example_dbt_project/seeds/: raw_substack_subscribers.csv
metrics_example/: dbt_project.yml
metrics_example/models/: dynamic_query.sql  metrics.yml  netflix_performance.sql  netflix_release_metrics.sql
metrics_example/seeds/: netflix_titles.csv
terraform/: .terraform.lock.hcl  db-setup.sql  main.tf  outputs.tf  vars.tf
